--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=backend
 spring.mustache.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+spring.web.resources.static-locations=classpath:/static/
