--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.thymeleaf.encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.web.resources.static-locations=classpath:/static/
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
