--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.thymeleaf.encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.web.resources.static-locations=classpath:/static/
+logging.level.org.springframework=DEBUG
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.format_sql=true
