Sell product aviable and css corrected. Also view and edit profile as admin uploaded

--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -14,3 +14,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port = 8443
 server.ssl.key-store = classpath:keystore.jks
 server.ssl.key-store-password = password
+
+# For newProduct
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
