--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -19,3 +19,17 @@ server.ssl.key-store-password = password
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
+
+#For email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+#SMT autentification and cipher
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+#Our page account and password
+spring.mail.username=bytemarket8@gmail.com      
+spring.mail.password=vgxe ijvg wnon mqrf
+
