--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-#Our page account and password
+#Our page account and password(fake)
 spring.mail.username=bytemarket8@gmail.com      
-spring.mail.password=vgxe ijvg wnon mqrf
+spring.mail.password=vgxe ijvg wnon mqrf    
 
