--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.encoding.force=true
 spring.web.resources.static-locations=classpath:/static/
 logging.level.org.springframework=DEBUG
 
-spring.datasource.url=jdbc:h2:mem:testdb
+
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -32,4 +32,13 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 #Our page account and password(fake)
 spring.mail.username=bytemarket8@gmail.com      
 spring.mail.password=vgxe ijvg wnon mqrf    
+
+#mysql
+# Configuración de MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/bytemarket
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
 
