--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.port = 8443
 server.ssl.key-store = classpath:keystore.jks
 server.ssl.key-store-password = password
 
-# For newProduct
+#For newProduct
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
@@ -33,8 +33,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.username=bytemarket8@gmail.com      
 spring.mail.password=vgxe ijvg wnon mqrf    
 
-#mysql
-# Configuración de MySQL
+#MySQL configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/bytemarket
 spring.datasource.username=root
 spring.datasource.password=password
