first working version of Dockerfile and docker-compose

--- a/ByteMarket/backend/pom.xml
+++ b/ByteMarket/backend/pom.xml
@@ -104,6 +104,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>es.grupo04.backend.Application</mainClass> <!-- Aquí pones tu clase principal -->
+                </configuration>
             </plugin>
 
             <plugin> 
