--- a/ByteMarket/backend/docker-compose.yml
+++ b/ByteMarket/backend/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       - SPRING_DATASOURCE_PASSWORD=password
     restart: on-failure
   db:
-    image: mysql:5.7
+    image: mysql:8.0
+    ports:
+      - 3307:3306
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=bytemarket
