--- a/ByteMarket/backend/docker-compose.yml
+++ b/ByteMarket/backend/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services: 
   web:
     build: .
@@ -8,6 +7,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://db/bytemarket
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_JPA_HIBERNATE_DLL_AUTO=create-drop
     restart: on-failure
   db:
     image: mysql:8.0
