--- a/ByteMarket/backend/pom.xml
+++ b/ByteMarket/backend/pom.xml
@@ -79,6 +79,7 @@
             <version>1.6.3</version> 
         </dependency>
 
+        <!--For security in REST-->
         <dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -96,6 +97,14 @@
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
+        <!--OpenAPI documentation-->
+        <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.8.5</version>
+        </dependency>
+
 
     </dependencies>
 
