--- a/ByteMarket/backend/api-docs/api-docs.yaml
+++ b/ByteMarket/backend/api-docs/api-docs.yaml
@@ -6,11 +6,11 @@ servers:
 - url: https://localhost:8443
   description: Generated server url
 paths:
-  /api/v1/profile:
+  /api/v1/profiles:
     put:
-      summary: Update user profile information and optionally upload a profile picture
       tags:
       - profile-rest-controller
+      summary: Update user profile information
       operationId: updateProfile
       parameters:
       - name: name
@@ -58,9 +58,9 @@ paths:
                 type: object
   /api/v1/products/{id}:
     get:
-      summary: Retrieve a product by its ID
       tags:
       - product-rest-controller
+      summary: Retrieve a product by its ID
       operationId: getProductById
       parameters:
       - name: id
@@ -79,9 +79,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/ProductDTO"
     put:
-      summary: Update an existing product by its ID
       tags:
       - product-rest-controller
+      summary: Update product by its ID
       operationId: updateProduct
       parameters:
       - name: id
@@ -105,9 +105,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/ProductDTO"
     delete:
-      summary: Delete a product by its ID
       tags:
       - product-rest-controller
+      summary: Delete product by ID
       operationId: deleteProduct
       parameters:
       - name: id
@@ -127,9 +127,9 @@ paths:
                 $ref: "#/components/schemas/ProductDTO"
   /api/v1/users/{userId}/reviews:
     get:
-      summary: Fetch all reviews for a specific user by their ID
       tags:
       - review-report-rest-controller
+      summary: Retrieve reviews recieved by a user by user ID
       operationId: getReviews
       parameters:
       - name: userId
@@ -150,9 +150,9 @@ paths:
                 items:
                   $ref: "#/components/schemas/ReviewDTO"
     post:
-      summary: Submit a new review for a user by their ID
       tags:
       - review-report-rest-controller
+      summary: Create (post) a review for the user indicated by user ID
       operationId: postReview
       parameters:
       - name: reviewDTO
@@ -177,9 +177,9 @@ paths:
                 $ref: "#/components/schemas/ReviewDTO"
   /api/v1/users/signin:
     post:
-      summary: Register a new user
       tags:
       - user-rest-controller
+      summary: Create new user
       operationId: createUser
       parameters:
       - name: user
@@ -198,9 +198,9 @@ paths:
                 type: object
   /api/v1/reports/products/{productId}:
     post:
-      summary: Report a product by its ID
       tags:
       - review-report-rest-controller
+      summary: Crate (post) a report to the product indicated by product ID
       operationId: postReport
       parameters:
       - name: reportDTO
@@ -225,9 +225,9 @@ paths:
                 $ref: "#/components/schemas/ReportDTO"
   /api/v1/products:
     get:
-      summary: Retrieve a paginated list of all products with optional filters
       tags:
       - product-rest-controller
+      summary: Retrieve a list of products
       operationId: getAllProducts
       parameters:
       - name: page
@@ -269,9 +269,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/PageProductDTO"
     post:
-      summary: Create a new product
       tags:
       - product-rest-controller
+      summary: Create a new product
       operationId: createProduct
       parameters:
       - name: productDTO
@@ -290,9 +290,9 @@ paths:
                 $ref: "#/components/schemas/ProductDTO"
   /api/v1/products/{id}/images:
     post:
-      summary: Upload an image for a specific product by its ID
       tags:
       - product-rest-controller
+      summary: Add image to a product by product ID
       operationId: addImage
       parameters:
       - name: id
@@ -319,9 +319,9 @@ paths:
           description: OK
   /api/v1/products/{id}/favorites:
     post:
-      summary: Toggle a product as a favorite by its ID
       tags:
       - product-rest-controller
+      summary: Toggle a product as favorite by its ID
       operationId: toggleFavoriteProduct
       parameters:
       - name: id
@@ -355,9 +355,9 @@ paths:
                 $ref: "#/components/schemas/PageProductDTO"
   /api/v1/chats/{productId}:
     post:
-      summary: Create a new chat for a product by its ID
       tags:
       - chat-rest-controller
+      summary: Create a new chat by the product ID
       operationId: createChat
       parameters:
       - name: productId
@@ -377,9 +377,9 @@ paths:
                 $ref: "#/components/schemas/ChatDTO"
   /api/v1/chats/{id}/send:
     post:
-      summary: Send a message in a chat by its ID
       tags:
       - chat-rest-controller
+      summary: Send a message in a chat by its ID
       operationId: sendMessage
       parameters:
       - name: id
@@ -404,9 +404,9 @@ paths:
                 type: object
   /api/v1/chats/{id}/sell:
     post:
-      summary: Mark a product as sold in a chat by its ID
       tags:
       - chat-rest-controller
+      summary: Mark a product as sold in a chat by its ID
       operationId: sellProduct
       parameters:
       - name: id
@@ -426,9 +426,9 @@ paths:
                 type: object
   /api/v1/auth/refresh:
     post:
-      summary: Refresh an authentication token
       tags:
       - rest-login-controller
+      summary: Refresh authentication token
       operationId: refreshToken
       parameters:
       - name: RefreshToken
@@ -447,9 +447,9 @@ paths:
                 $ref: "#/components/schemas/AuthResponse"
   /api/v1/auth/logout:
     post:
-      summary: Log out the current user
       tags:
       - rest-login-controller
+      summary: Log out of an account
       operationId: logOut
       responses:
         "404":
@@ -462,9 +462,9 @@ paths:
                 $ref: "#/components/schemas/AuthResponse"
   /api/v1/auth/login:
     post:
-      summary: Authenticate a user and log in
       tags:
       - rest-login-controller
+      summary: Log in to an account
       operationId: login
       requestBody:
         content:
@@ -483,9 +483,9 @@ paths:
                 $ref: "#/components/schemas/AuthResponse"
   /api/v1/users:
     get:
-      summary: Retrieve a list of all users
       tags:
       - user-rest-controller
+      summary: Retrieve a list of all users
       operationId: getAllUsers
       responses:
         "404":
@@ -500,9 +500,9 @@ paths:
                   $ref: "#/components/schemas/UserDTO"
   /api/v1/users/{userId}:
     get:
-      summary: Fetch a user’s details by their ID
       tags:
       - user-rest-controller
+      summary: Retrieve user by its ID
       operationId: getUserById
       parameters:
       - name: userId
@@ -522,9 +522,9 @@ paths:
                 type: object
   /api/v1/users/me:
     get:
-      summary: Retrieve details of the authenticated user
       tags:
       - user-rest-controller
+      summary: Retrieve details of the authenticated user
       operationId: getAuthenticatedUser
       responses:
         "404":
@@ -537,9 +537,9 @@ paths:
                 type: object
   /api/v1/reviews/{reviewId}:
     get:
-      summary: Retrieve a review by its ID
       tags:
       - review-report-rest-controller
+      summary: Retrieve a review by its ID
       operationId: getReview
       parameters:
       - name: reviewId
@@ -558,9 +558,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/ReviewDTO"
     delete:
-      summary: Delete a review by its ID
       tags:
       - review-report-rest-controller
+      summary: Delete review by its ID
       operationId: deleteReview
       parameters:
       - name: reviewId
@@ -580,9 +580,9 @@ paths:
                 type: string
   /api/v1/reports:
     get:
-      summary: Fetch a list of all reports
       tags:
       - review-report-rest-controller
+      summary: Retrieve a list of all reports
       operationId: getReports
       responses:
         "404":
@@ -595,11 +595,11 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ReportDTO"
-  /api/v1/profile/stats:
+  /api/v1/profiles/stats:
     get:
-      summary: Retrieve statistics for the user’s profile
       tags:
       - profile-rest-controller
+      summary: Retrieve user's purchases and sales statistics
       operationId: stats
       responses:
         "404":
@@ -610,11 +610,11 @@ paths:
             '*/*':
               schema:
                 type: object
-  /api/v1/profile/image/{id}:
+  /api/v1/profiles/image/{id}:
     get:
-      summary: Fetch the profile image of a user by their ID
       tags:
       - profile-rest-controller
+      summary: Retrieve a user image by user ID
       operationId: getProfileImage
       parameters:
       - name: id
@@ -634,9 +634,9 @@ paths:
                 type: object
   /api/v1/products/sales:
     get:
-      summary: Retrieve a list of the user’s recent sales
       tags:
       - product-rest-controller
+      summary: Retrieve last sales of the user
       operationId: getLastSales
       responses:
         "404":
@@ -651,9 +651,9 @@ paths:
                   $ref: "#/components/schemas/ProductDTO"
   /api/v1/products/purchases:
     get:
-      summary: Retrieve a list of the user’s recent purchases
       tags:
       - product-rest-controller
+      summary: Retrieve last purchases of the user
       operationId: getLastPurchases
       responses:
         "404":
@@ -668,9 +668,9 @@ paths:
                   $ref: "#/components/schemas/ProductDTO"
   /api/v1/products/favorites:
     get:
-      summary: Fetch a paginated list of the user’s favorite products
       tags:
       - product-rest-controller
+      summary: Retrieve a list of favorite products of the authenticated user
       operationId: getFavoriteProducts
       parameters:
       - name: page
@@ -698,9 +698,9 @@ paths:
                 $ref: "#/components/schemas/PageProductDTO"
   /api/v1/chats:
     get:
-      summary: Retrieve a list of all chats for the authenticated user
       tags:
       - chat-rest-controller
+      summary: Retrieve a list of all chats of the authenticated user
       operationId: getUserChats
       responses:
         "404":
@@ -715,9 +715,9 @@ paths:
                   $ref: "#/components/schemas/ChatDTO"
   /api/v1/chats/{id}:
     get:
-      summary: Fetch a specific chat by its ID
       tags:
       - chat-rest-controller
+      summary: Retrieve a chat by ID
       operationId: getChat
       parameters:
       - name: id
@@ -737,9 +737,9 @@ paths:
                 $ref: "#/components/schemas/ChatDTO"
   /api/v1/reports/{reportId}:
     delete:
-      summary: Delete a report by its ID
       tags:
       - review-report-rest-controller
+      summary: Delete report by its ID
       operationId: deleteReport
       parameters:
       - name: reportId
@@ -757,11 +757,11 @@ paths:
             '*/*':
               schema:
                 type: string
-  /api/v1/profile/{id}:
+  /api/v1/profiles/{id}:
     delete:
-      summary: Delete a user account by its ID
       tags:
       - profile-rest-controller
+      summary: Delete a user by its ID
       operationId: deleteAccount
       parameters:
       - name: id
@@ -781,9 +781,9 @@ paths:
                 type: object
   /api/v1/products/{productId}/images/{imageId}:
     delete:
-      summary: Remove an image from a product by product and image IDs
       tags:
       - product-rest-controller
+      summary: Delete image of a product by product ID and image ID
       operationId: removeImage
       parameters:
       - name: productId
@@ -965,13 +965,13 @@ components:
           format: int32
         sort:
           $ref: "#/components/schemas/SortObject"
+        numberOfElements:
+          type: integer
+          format: int32
         first:
           type: boolean
         last:
           type: boolean
-        numberOfElements:
-          type: integer
-          format: int32
         pageable:
           $ref: "#/components/schemas/PageableObject"
         empty:
@@ -986,22 +986,22 @@ components:
           $ref: "#/components/schemas/SortObject"
         unpaged:
           type: boolean
-        paged:
-          type: boolean
-        pageSize:
-          type: integer
-          format: int32
         pageNumber:
           type: integer
           format: int32
+        pageSize:
+          type: integer
+          format: int32
+        paged:
+          type: boolean
     SortObject:
       type: object
       properties:
         empty:
           type: boolean
-        sorted:
-          type: boolean
         unsorted:
+          type: boolean
+        sorted:
           type: boolean
     ChatDTO:
       type: object
@@ -1052,6 +1052,21 @@ components:
           type: string
         password:
           type: string
+    PurchaseDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        product:
+          $ref: "#/components/schemas/ProductBasicDTO"
+        buyer:
+          $ref: "#/components/schemas/UserBasicDTO"
+        seller:
+          $ref: "#/components/schemas/UserBasicDTO"
+        purchaseDate:
+          type: string
+          format: date
     UserDTO:
       type: object
       properties:
@@ -1078,11 +1093,11 @@ components:
         sales:
           type: array
           items:
-            $ref: "#/components/schemas/ProductBasicDTO"
+            $ref: "#/components/schemas/PurchaseDTO"
         purchases:
           type: array
           items:
-            $ref: "#/components/schemas/ProductBasicDTO"
+            $ref: "#/components/schemas/PurchaseDTO"
         iframe:
           type: string
         image:
