fixed Dockerfile and Docker Compose to make them work correctly, added needed configuration for the SPA to work

--- a/ByteMarket/backend/src/main/resources/application.properties
+++ b/ByteMarket/backend/src/main/resources/application.properties
@@ -46,3 +46,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.url=/v3/api-docs
 
+# Necessary for SPA application
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
