--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,13 +1,11 @@
-# Build Angular project
+# Build Angular project 
 FROM node:23-slim AS frontbuilder
 WORKDIR /frontend
 COPY frontend/ ./
 RUN npm install
-RUN npx ng build --configuration production --base-href="/spa/" 
+RUN npx ng build --configuration production --base-href="/new/" 
 
-
-
-# Base image for the build container
+# Base image for the build container 
 FROM maven:3.9.9-eclipse-temurin-21-alpine AS builder
 
 # Set the working directory to execute commands
@@ -21,12 +19,10 @@ RUN mvn clean verify
 
 # Copy the project source code
 COPY ByteMarket/backend/src/ ./src
-COPY --from=frontbuilder /frontend/dist/frontend/browser/ ./src/main/resources/static/spa
+COPY --from=frontbuilder /frontend/dist/frontend/browser/ ./src/main/resources/public/new
 
-# Build the project
+# Build the Spring Boot app
 RUN mvn package -DskipTests
-
-
 
 # Use an official OpenJDK runtime as a parent image
 FROM eclipse-temurin:21-jre-alpine
@@ -37,8 +33,8 @@ WORKDIR /ByteMarket/backend/
 # Copy the jar file into the container
 COPY --from=builder /ByteMarket/backend/target/*.jar ./webapp04.jar
 
-# Expose the port the app runs on
+# Expose the application port
 EXPOSE 8443
 
-# Define the command to run the app
+# Run the application
 ENTRYPOINT ["java", "-jar", "webapp04.jar"]
